# 3dViewer_CPP

./: README.md
src/: Makefile  manual.texi  tests.cc
src/3DViewer_v2/: CMakeLists.txt  main.cc
src/3DViewer_v2/controller/: adapter.cc  adapter.h  controller.cc  controller.h
src/3DViewer_v2/model/: affine_transform_utils.cc  affine_transform_utils.h  facet.h  iterable_vector.h  model.cc  model.h  parser.cc  parser.h  point.h
src/3DViewer_v2/resources/images/: cat.icns
src/3DViewer_v2/view/: oglwidget.cc  oglwidget.h  view.cc  view.h  view.ui
